--- a/theme_styles.css
+++ b/theme_styles.css
@@ -1670,8 +1670,8 @@ border-radius: 4px !important;
     }
 
        
-    .listagem .slick-slider .slick-arrow.arrow-l{left: 35px;padding-right: 2px;}
-    .listagem .slick-slider .slick-arrow.arrow-r{right: 35px;padding-left: 2px;}
+    .listagem .slick-slider .slick-arrow.arrow-l{left: 58px;padding-right: 2px;}
+    .listagem .slick-slider .slick-arrow.arrow-r{right: 58px;padding-left: 2px;}
     
     .listagem .slick-slider .slick-arrow,
     #tay_levetambem .slick-slider .slick-arrow{
@@ -1874,9 +1874,19 @@ border-radius: 4px !important;
 
     .listagem .slick-slider .slick-list{
         margin: 0 -7.5px;
-        padding: 0 57.5px!important;
+        padding: 0 80px!important;
     }
- 
+    .produtos-carrossel{
+        flex-direction: column;
+        gap: 1rem;
+    }
+    [class^="theme_cardBanner"] *{width: 100%;box-sizing: border-box;}
+    .listagem .produtos-carrossel > .slick-slider,
+    [class^="theme_cardBanner"] + .listagem-linha{
+        width: 100dvw!important;
+        margin: 0 -.6rem!important;
+    }
+    .listagem .produtos-carrossel{padding: 0;}
     
 }
 .pagina-carrinho .btn i{display: inline-block;}
