--- a/style.css
+++ b/style.css
@@ -3508,7 +3508,8 @@ body:not(.pagina-inicial) .secao-banners .banner.cheio img{
     border: 1px solid #f2f2f2!important;
     box-sizing: border-box;
 }
-.listagem-item .produto-sobrepor{display: none;}
+.listagem-item .bandeiras-produto{z-index: 10;}
+.listagem-item .produto-sobrepor{position: relative;}
 .listagem-item a,
 .listagem-item a:hover{text-decoration: none;}
 @media(max-width:990px){
